--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-01 23:42:39
+lastsearch = 2024-08-02 06:46:53
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 7.4%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [demhong.vn]
 match = 11.1%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [alnena.vn]
-match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
+match = -3.7%%
+title = Bộ Chăn Ga Gối Chun Trần Alnena 100%% Cotton Mã A21242
+url = https://alnena.vn/products/bo-chan-ga-goi-chun-tran-alnena-100-cotton-ma
 
 [bedding.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -25.9%%
-title = chăn ga cotton giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga cotton
+match = -18.5%%
+title = Bộ Chăn Ga Gối Cotton Bèo Nơ Hàn Quốc Cao Cấp Mẫu ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Bèo-Nơ-Hàn-Quốc-Cao-Cấp-Mẫu-Siêu-Xinh-i.222675465.7371664284
 
 [lynconcept.com]
 match = -25.9%%
@@ -190,4 +190,9 @@ url = https://eseunvietnam.com/3-luu-y-khong-the-bo-qua-khi-mua-chan-ga-goi-nem-
 match = 44.4%%
 title = Bộ Drap Gối Cotton Màu - 16
 url = https://mym.com.vn/bo-drap-goi-cotton-mau-16
+
+[demvip.vn]
+match = 37.0%%
+title = Bộ chăn ga gối cotton lụa cao cấp LTT16
+url = https://demvip.vn/products/bo-chan-ga-goi-cotton-lua-cao-cap-ltt16
 
