--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-02 05:23:10
+lastsearch = 2024-08-02 07:00:08
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,19 +12,19 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
-match = -26.1%%
-title = ĐỊA CHỈ MUA CHIẾU TRÚC TIN CẬY TĨNH LONG AN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/dia-chi-mua-chieu-truc-tin-cay-tinh-long-an-55.html
+match = 43.5%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
-url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
+match = -65.2%%
+title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-đủ-kích-thước-i.334752746.9233812040
 
 [www.lazada.vn]
 match = 21.7%%
@@ -57,9 +57,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [khodem.vn]
-match = -39.1%%
-title = MUA CHIẾU TRÚC CAO BẰNG Ở ĐÂU TẠI HÀ NỘI - Kho đệm
-url = https://khodem.vn/mua-chieu-truc-cao-bang-o-dau-tai-ha-noi/
+match = -56.5%%
+title = Chiếu trúc cây Cao Bằng Chiếu Việt Nam tốt nhất - Kho đệm
+url = https://khodem.vn/chieu-truc-cay-cao-bang/
 
 [thegioichieutruc.com]
 match = 0.0%%
