--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-02 05:14:35
+lastsearch = 2024-08-02 06:47:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -330,4 +330,9 @@ url = https://eva.vn/bi-quyet-lam-dep/xam-khoi-mau-toc-dep-an-tuong-phu-hop-voi-
 match = 3.6%%
 title = HỒ SƠ ĐỀ XUẤT KHU VỰC PHÁT TRIỂN ĐÔ THỊ
 url = https://trangbom.dongnai.gov.vn/SiteAssets/Lists/ThongBao/EditForm/01-Ho so de xuat KV PTDT Khu 2 TT Trang Bom.pdf
+
+[www.dkn.tv]
+match = -21.4%%
+title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
+url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
