--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-02 03:44:15
+lastsearch = 2024-08-02 06:59:07
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -157.9%%
-title = Chú Heo Lười, Khu Vui Chơi Thiếu Nhi - Nhạc Thiếu Nhi Vui ...
-url = https://www.youtube.com/watch?v=eN0W-tmCeX0
+match = -131.6%%
+title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
+url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoqfgNBd__Cv3HRoGImKQAbV_aaTlQjDaLkrjKLGSp9Nie_cYr07
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
 match = -110.5%%
