--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-02 03:58:15
+lastsearch = 2024-08-02 06:49:39
 
 [tiki.vn]
 match = 16.0%%
@@ -22,9 +22,9 @@ title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
 url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
-match = 0.0%%
-title = sitemap-article-2022-10-12.xml
-url = https://congly.vn/sitemap-article-2022-10-12.xml
+match = -72.0%%
+title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan lĩnh ...
+url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
 match = 12.0%%
