--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-02 03:35:17
+lastsearch = 2024-08-02 06:45:10
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -168.8%%
-title = ️Giới thiệu cho mấy anh em quán quà chiều ngon nhất ...
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1469398273723904/
+match = -200.0%%
+title = Anh Em United - Để mà hỏi Chido Obi Martin đá như nào ...
+url = https://m.facebook.com/story.php/?story_fbid=461723650074946&id=100087119453381
 
 [www.sjcallahabad.org]
 match = -212.5%%
