--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-02 02:31:18
+lastsearch = 2024-08-02 06:52:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -168.8%%
-title = Sài Gòn ĐÊM VẮNG LIÊU XIÊU CẢNH CHỢ 100 NĂM | CHỢ ...
-url = https://www.youtube.com/watch?v=83-kQ4QO4h0
+match = -237.5%%
+title = How To Prepare 5 Delicious Dishes From Snake Meat | In The ...
+url = https://www.youtube.com/watch?v=2DxeK5G_oCs
 
 [saigontourist.edu.vn]
 match = -162.5%%
