--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-02 05:49:06
+lastsearch = 2024-08-02 07:00:50
 
 [www.lazada.vn]
 match = -111.1%%
 title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html?srsltid=AfmBOopAmSJkjMIpdhokjedTam9nMx-LiYJ1Rw1eWOTE947ELLaX18Am
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -57,9 +57,9 @@ title = Thùy Ngân (@huuloc861) • Instagram photos and videos
 url = https://www.instagram.com/huuloc861/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorMAT4Ad17nPfZXZ-tzqvMmtzk5Tl9i7f4q1nducV5rfKy4G_7m
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
 match = -83.3%%
