--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-02 05:24:35
+lastsearch = 2024-08-02 06:55:18
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -60.0%%
+title = United States biological weapons program
+url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
 
 [www.facebook.com]
 match = -160.0%%
@@ -102,9 +102,9 @@ title =
 url = https://english.moe.go.kr/sub/infoRenewal.do?m=0301&page=0301&s=english
 
 [cryptonews.com]
-match = -115.0%%
-title = 37 New Crypto ETFs and ETPs Listed in First Half of 2024
-url = https://cryptonews.com/news/37-new-crypto-etfs-and-etps-listed-in-first-half-of-2024-etfgi-data.htm
+match = -140.0%%
+title = Bitcoin Miner CleanSpark Expands with New Facilities in ...
+url = https://cryptonews.com/news/bitcoin-miner-cleanspark-expands-with-new-facilities-in-wyoming-and-tennessee.htm
 
 [www.google.com]
 match = 0.0%%
