--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-02 02:31:40
+lastsearch = 2024-08-02 09:03:14
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
+title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
+url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 17.9%%
-title = Việc làm spa uy tín - Facebook
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = -7.1%%
+title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
+url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -52,8 +52,8 @@ title = Sáng 17/9, đã 15 ngày không ghi nhận ca mắc mới COVID ...
 url = https://suckhoedoisong.vn/sang-17-9-da-15-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-cong-dong-169180306.htm
 
 [vinif.org]
-match = -42.9%%
-title = Danh sách tài trợ dự án Khoa học và Công nghệ - VinIf
+match = 7.1%%
+title = Annual Project Archive - VinIf
 url = https://vinif.org/annual/
 
 [tinchi.qnu.edu.vn]
