--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-02 06:48:33
+lastsearch = 2024-08-02 09:05:58
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOor3YqJw2c9IH0HsslFlc3DTfFc31g0VXVkxPb1GvRAz06mAXa2Q
 
 [demqueensweet.com]
 match = -65.0%%
@@ -59,7 +59,7 @@ url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop_grfts3j8ycX8nuQXEZ2AQrd6U8QBnvcHPE8VeHAiHtODvq33
 
 [www.diepxuan.com]
 match = 0.0%%
