--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-02 09:53:28
+lastsearch = 2024-08-02 12:15:11
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@justlikemoms_/video/7327474225000975662?lang=en
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVVLsEXG&sig=ACfU3U0gH18niFiMJNvqNPPKfTesBHRQ-w&hl=en&sa=X&ved=2ahUKEwjVotD0ptWHAxU0kIkEHSymD0gQ6AF6BAgZEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVVMqJYz&sig=ACfU3U0Vxi00_xTiFB8vtJFwCqv1CP1M2g&hl=en&sa=X&ved=2ahUKEwiItfXKxtWHAxWkElkFHftbBT0Q6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -122,8 +122,8 @@ title = Vở ôly Hồng Hà 0555 48 trang - thế giới văn phòng phẩm
 url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 
 [everonvn.com.vn]
-match = -61.5%%
-title = Cách giặt ruột gối Everon bằng tay và bằng máy giặt
+match = -88.5%%
+title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
 url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
