--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-02 01:45:34
+lastsearch = 2024-08-02 12:26:48
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+match = -144.4%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -52,8 +52,8 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
 
 [everonvn.com.vn]
-match = -155.6%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Esm-20011 ...
+match = 27.8%%
+title = Bộ Everon Esm-20011
 url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = -38.9%%
-title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+match = 27.8%%
+title = Bộ phủ màu 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 6.7%%
