--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-02 11:47:14
+lastsearch = 2024-08-02 12:27:51
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
 match = -11.1%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=Y9mBdxK-DPg
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html?srsltid=AfmBOoqMoTUvtT_H3UYVy5UldrSwOE1aZbmI3JA8ZtbLSDRpS_rT6h8I
 
 [sanhangre.net]
 match = -33.3%%
@@ -149,7 +149,7 @@ url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOopOp10StfRA5gE8uDBrypdlsOhaApjwtDwlLX37rKgIczzd4bNK
 
 [vnvc.vn]
 match = -59.3%%
