--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-02 11:53:30
+lastsearch = 2024-08-02 12:29:13
 
 [www.everonvn.vn]
 match = 66.7%%
@@ -17,9 +17,9 @@ title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
 url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
 
 [www.diepxuan.com]
-match = 4.8%%
-title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html?srsltid=AfmBOooYlr75PuMUeYmRPnGFoPjgrcQ0sz7QjaQAvmB5fAKcA-VDcx-F
+match = 42.9%%
+title = Ruột gối kê hoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html?srsltid=AfmBOoovgSp9pSCtQMT8MXOp5_NbtOSYEwdgKoMWhVWdnTi04W6UjTB9
 
 [elambo.vn]
 match = -90.5%%
@@ -34,7 +34,7 @@ url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOoprHiII93AzkGRTTtc_PF5fBI8XbF1O2iA0_SQLqDVr0BRLyYVP
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOoolV1YzjQ0dhrNG3f9AxJWYS6kRZ45SCgLTWKZ35np0vlcGHf_o
 
 [demxanh.com]
 match = -81.0%%
