--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-02 11:44:51
+lastsearch = 2024-08-02 12:16:56
 
 [www.diepxuan.com]
 match = -125.0%%
 title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html?srsltid=AfmBOoqsuENPdSupGTjIZNeM58ouTAPqv14fNr_HAa6DaM1OSm6H6bzR
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -200.0%%
-title = obessed with this 90’s brown lip duo by @Huda Beauty ...
-url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
+match = -143.8%%
+title = Gloss for life #beautytok #hudabeauty #lip ...
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [archiveofourown.org]
 match = -137.5%%
