--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-02 06:17:11
+lastsearch = 2024-08-02 12:14:30
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 11.1%%
-title = Marina Sirota, PhD
-url = https://profiles.ucsf.edu/marina.sirota
+match = -6.2%%
+title = Spencer Behr, MD
+url = https://profiles.ucsf.edu/spencer.behr
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
+title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
 
 [www.west-cs.com]
 match = -100.0%%
