--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-02 11:16:21
+lastsearch = 2024-08-02 13:39:18
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Hạt Đen Không Viền - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-hat-den-khong-vien/
 
 [noithatbamboo.vn]
-match = 17.9%%
-title = Chiếu trúc mắt mai không viền màu vàng 180x200cm
-url = https://noithatbamboo.vn/chieu-truc-hat-1m8/chieu-truc-mat-mai-khong-vien-mau-vang-180x200cm.html
+match = 14.3%%
+title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
+url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
 
 [www.lazada.vn]
 match = -25.0%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = -21.4%%
-title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
-url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
+match = 42.9%%
+title = Chiếu trúc 1,6*2m hạt nâu không viền
+url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
